examples/test/testpolicy12270.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12270
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key2: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value0
      podSelector:
        matchLabels:
          key31: value32
          key39: value45
          key49: value0
